# robot-waiter

./: README.md
Navigation/: README.md
Navigation/testing_data/: factory_goal.txt  factory_path.txt  home_goal.txt  home_path.txt  office_goal.txt  office_path.txt
Navigation/tse_local_dir/tse_gazebo/: CMakeLists.txt  package.xml
Navigation/tse_local_dir/tse_gazebo/launch/: tse_gazebo.launch
Navigation/tse_local_dir/tse_gazebo_worlds/: CMakeLists.txt  package.xml
Navigation/tse_local_dir/tse_gazebo_worlds/worlds/: home_with_human.world  small_office_with_human.world
Navigation/tse_local_dir/tse_navigation/: CMakeLists.txt  package.xml
Navigation/tse_local_dir/tse_navigation/config/: amcl_params.yaml  dwa_params.yaml
Navigation/tse_local_dir/tse_navigation/launch/: localization.launch  localization_2dnav.launch  localization_amcl_tse.launch  move_base.launch  move_base_tse.launch  navigation_tse.launch  slam_toolbox.launch  state_machine.launch  state_machine_tse.launch  tse_octomap_server.launch
Navigation/tse_local_dir/tse_navigation/scripts/: distance_calculator.py  goal_recorder.py
Navigation/tse_local_dir/tse_navigation/src/: nav_and_return.cpp
Navigation/tse_local_dir/tse_navigation/tmule/: tse_simulated.yaml
Navigation/tse_local_dir/tse_navigation_sm/: CMakeLists.txt  package.xml
Navigation/tse_local_dir/tse_navigation_sm/scripts/: navigation.sh
Speech/: Main.py  README.md  Waiter_Chat.py  config.txt  requirements.txt
Vision/: README.md  requirements.txt  robot_waiter_vision.py
(+8 files in other folders)
